2007-04-03  Andy Wingo  <wingo@pobox.com>

	* flumotion/test/test_flavors.py: Remove twisted 1.3 crufties.

	* flumotion/twisted/flavors.py: Add a comment.

2007-04-02  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/component/effects/volume/volume.py (Volume.setUIState):
	Admin UI code expects a list, do not set to just a value.

2007-03-30  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/main.py (main): Pass along the configDir when
	making Vishnu.

	* flumotion/manager/manager.py (Vishnu.__init__): New optional
	argument, configDir, defaulting to configdir/managers/NAME/.

	* flumotion/manager/admin.py (AdminAvatar._saveFlowFile): Save to
	flows/ within the directory from which the original flow file was
	loaded; i.e. don't guess at that dir's name.

2007-03-29  Michael Smith  <msmith@fluendo.com>

	* flumotion/admin/gtk/main.py:
	  Reorder callbacks/errbacks in greeter to avoid double-destroying a
	  greeter and hence failing badly if we initially failed to connect to
	  a manager.

2007-03-28  Andy Wingo  <wingo@pobox.com>

	* flumotion/test/test_common_netutils.py
	(TestRoutingTable.testParseFromFile): Add a couple tests.

	* flumotion/common/netutils.py (RoutingTable.fromFile): Make route
	names optional. Trim trailing whitespace.

2007-03-27  Michael Smith  <msmith@fluendo.com>

	* flumotion/admin/admin.py:
	  Apply patch to getEntry to not use deferred generator, which was
	  mysteriously breaking things.
	  Fixes #596.

2007-03-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/service/service.py (Servicer._parseManagersWorkers,
	  Servicer.getWorkers):
	  Sort the list of managers and workers.

2007-03-26  Michael Smith  <msmith@fluendo.com>

	* flumotion/worker/feed.py:
	  Change indentation to 4 columns rather than 8 for one method.

2007-03-22  Michael Smith  <msmith@fluendo.com>

	* flumotion/admin/gtk/main.py:
	  Fix specifying admin on command line.

2007-03-22  Michael Smith  <msmith@fluendo.com>
