@@ -1,5 +1,14 @@
 2007-04-03  Andy Wingo  <wingo@pobox.com>
 
+	* flumotion/test/test_flavors.py
+	(TestFullListener.testInvalidate): Test for new functionality.
+
+	* flumotion/twisted/flavors.py: Update comment, it seems
+	invalidate is a good idea after all.
+	(StateRemoteCache.addListener): Support an invalidate callback.
+	Call it if set and the state is already invalid.
+	(StateRemoteCache.invalidate): New method.
+
 	* flumotion/test/test_flavors.py: Remove twisted 1.3 crufties.
 
 	* flumotion/twisted/flavors.py: Add a comment.
